src/styles/_custom-classes.scss
@use './mixins' as *;

.custom-margin-top {
	@include set-margin('top', 3rem);
}

.custom-margin-bottom {
	@include set-margin('bottom', 2rem);
}

.icons-bar-margin {
	@include set-margin('top', 1.5rem);
}

.custom-btn-border {
	border: solid 2px black;
}

.custom-header {
	font-size: calc(2rem + 1.5vw);
}

.custom-link-padding {
	padding: 10px;
}

.custom-position {
	top: 58px;
	left: -12px;
	z-index: 1;
	width: 100vw;
}

.blocker {
	height: 100vh;
	z-index: 0;
	width: 100vw;
}

.svg-size {
	width: 35px;
	height: 35px;
}

.nav-item:hover {
	cursor: pointer;
	&:not(.navbar-nav > &:last-child) {
		background-color: #e1e1e1;
		text-decoration: underline;
		text-underline-offset: 2px;
		border-radius: 5px;
	}
}

// hide the dropdown toggle when the navbar is expanded because it keeps showing up on top of the .blocker element set on the navbar
.dropdown-toggle-custom::before {
	content: '';
	display: inline-block;
	width: 100%;
	height: 100%;
	background-color: var(--bs-body-bg);
	position: absolute;
	top: 0;
	left: 0;
}

@media (width > 768px) {
	.custom-width {
		width: 50% !important;
	}
}

.contact-form > :not(button) {
	margin-bottom: 1.5rem;
}

